# account-fiscal-rule

./: .copier-answers.yml  .coveragerc  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  .travis.yml  README.md  __init__.py  __terp__.py  account_product_fiscal_classification.py  oca_dependencies.txt  product_view.xml  requirements.txt  test-requirements.txt
account_avatax/: README.rst  __manifest__.py
account_avatax_exemption/: README.rst  __manifest__.py
account_avatax_exemption_base/: README.rst  __manifest__.py
account_avatax_oca/: README.rst  __init__.py  __manifest__.py  hooks.py
account_avatax_oca_log/: README.rst  __manifest__.py
account_avatax_repair_oca/: README.rst  __manifest__.py
account_avatax_sale/: README.rst  __manifest__.py
account_avatax_sale_fire_protection/: README.rst  __init__.py  __manifest__.py
account_avatax_sale_oca/: README.rst  __manifest__.py
account_avatax_sale_stock/: __manifest__.py
account_avatax_stock/: __manifest__.py
account_avatax_website_sale/: README.rst  __manifest__.py
account_default_fiscal_position/: README.rst  __manifest__.py  __openerp__.py
account_ecotax/: README.rst  __manifest__.py
account_ecotax_sale/: README.rst  __manifest__.py
account_fiscal_position_autodetect_optional_vies/: README.rst  __manifest__.py
account_fiscal_position_get_fpos_by_region_hook/: README.rst  __manifest__.py  hooks.py
account_fiscal_position_partner_domain/: README.rst  __manifest__.py
account_fiscal_position_partner_type/: README.rst  hooks.py  (+3 more)
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+1155 files in other folders)
